Updated conditionals notebook

--- a/intro_to_python_2.ipynb
+++ b/intro_to_python_2.ipynb
@@ -306,10 +306,134 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f2a06ba7",
+   "metadata": {},
+   "source": [
+    "## **Indetation is Important in Python**\n",
+    "\n",
+    "In Python, indentation refers to the spaces or tabs placed at the beginning of a line of code. Unlike many other programming languages that use curly braces or keywords to define code blocks, Python uses indentation as a fundamental part of its syntax to indicate the structure and scope of code blocks.\n",
+    "\n",
+    "Indentation is used to group related statements together, forming code blocks within constructs like if statements, for loops, while loops, function definitions, and class definitions.\n",
+    "\n",
+    "Proper indentation is not merely a style preference in Python; it is a strict syntax requirement. Incorrect or inconsistent indentation will lead to *IndentationError* or *TabError*.\n",
+    "\n",
+    "All lines within a single code block must be indented by the **same amount of whitespace**. If a block needs to be nested further, it is simply indented by an additional level.\n",
+    "\n",
+    "While the specific number of spaces per indentation level is not strictly enforced by the language, the widely accepted convention is to use four spaces for each level of indentation. Mixing tabs and spaces within the same file is generally discouraged and can lead to issues."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e15974a2",
    "metadata": {},
    "source": [
-    "### Mini Project"
+    "#### Mini Projects\n",
+    "\n",
+    "1. We'll be creating a conditional statement that can print a message for somenone in a paticular stage of life"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c62a586",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are an elder\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 12\n",
+    "\n",
+    "if age >= 2 and age < 4:\n",
+    "    print(\"You are a baby\")\n",
+    "elif age >= 4 and age < 13:\n",
+    "    print(\"You are a child\")\n",
+    "elif age >= 13 and age < 20: \n",
+    "    print(\"You are a teenager\")\n",
+    "elif age >= 20 and age < 65:\n",
+    "    print(\"You are an adult\")\n",
+    "else:\n",
+    "    print(\"You are an elder\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19369da2",
+   "metadata": {},
+   "source": [
+    "2. Next, we'll create a system that checks whether a person is eligible to vote or not, based on their age, and print out a message for them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "16e5d54e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are not eligible to vote\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 10\n",
+    "\n",
+    "if age < 18:\n",
+    "    print(\"You are not eligible to vote\")\n",
+    "else: \n",
+    "    print(\"You are eligible to vote\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7fef4c8",
+   "metadata": {},
+   "source": [
+    "### Nested Conditionals\n",
+    "\n",
+    "This is when you use an if statement within another if statement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6addd0bd",
+   "metadata": {},
+   "source": [
+    "3. We'll be expanding voter checking system by adding another condition for people who are eligible to vote. We'll be checking if they have their voter's card or not and print a message for them based on this information.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "31af141e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You need to register to vote\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 20\n",
+    "voter_card = False\n",
+    "if age < 18:\n",
+    "    print(\"You are not eligible to vote\")\n",
+    "else: \n",
+    "    if voter_card:\n",
+    "        print(\"You are eligible to vote\")\n",
+    "    else:\n",
+    "        print(\"You need to register to vote\")"
    ]
   },
   {
@@ -317,22 +441,35 @@
    "id": "6a8a84ea",
    "metadata": {},
    "source": [
-    "### Using If Statements on a List"
+    "### Using If Statements on a List\n",
+    "\n",
+    "4. We're going to check if a movie is in a list of movies or not and print a message depending on the availability"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b812a24f",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbe45c9d",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Mini Project 2"
+    "available_movies = [\"Sonic 3\", \"Jujutsu Kaisen 0\", \"John Wick 4\"]\n",
+    "\n",
+    "if \"Sonic 3\" in available_movies:\n",
+    "    print(\"Sonic 3 is available for streaming.\")\n",
+    "else:\n",
+    "    print(\"Sonic 3 is not available for streaming.\")\n",
+    "\n",
+    "if \"Avatar 2\" in available_movies:  \n",
+    "    print(\"Avatar 2 is available for streaming.\")   \n",
+    "else:\n",
+    "    print(\"Avatar 2 is not available for streaming.\")\n",
+    "\n",
+    "if \"Jujutsu Kaisen 0\" in available_movies:\n",
+    "    print(\"Jujutsu Kaisen 0 is available for streaming.\")   \n",
+    "else:\n",
+    "    print(\"Jujutsu Kaisen 0 is not available for streaming.\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "27a49739",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
