Updated For Loops

--- a/intro_to_python_1.ipynb
+++ b/intro_to_python_1.ipynb
@@ -105,7 +105,9 @@
    "id": "35c8b188",
    "metadata": {},
    "source": [
-    "## **Syntax and Fundamentals**"
+    "## **Syntax and Fundamentals**\n",
+    "\n",
+    "Syntax is the set of rules that define how you write code so the computer can understand it.\n"
    ]
   },
   {
@@ -146,6 +148,14 @@
     "\n",
     "x, y, z = 1, 2, 3  # multiple assignment\n",
     "print(y)  # prints 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2230c47",
+   "metadata": {},
+   "source": [
+    "- **print()** is a function that shows text or values on the screen."
    ]
   },
   {
