--- a/intro_to_python_2.ipynb
+++ b/intro_to_python_2.ipynb
@@ -448,10 +448,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fbe45c9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sonic 3 is available for streaming.\n",
+      "Avatar 2 is not available for streaming.\n",
+      "Jujutsu Kaisen 0 is available for streaming.\n"
+     ]
+    }
+   ],
    "source": [
     "available_movies = [\"Sonic 3\", \"Jujutsu Kaisen 0\", \"John Wick 4\"]\n",
     "\n",
@@ -470,6 +480,14 @@
     "else:\n",
     "    print(\"Jujutsu Kaisen 0 is not available for streaming.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74fee06e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
