Updated while loops and comprehensions

--- a/intro_to_python_3.ipynb
+++ b/intro_to_python_3.ipynb
@@ -567,7 +567,134 @@
    "id": "baf15956",
    "metadata": {},
    "source": [
-    "### User Inputs"
+    "### User Inputs\n",
+    "\n",
+    "The input() function in Python is used to take user input.\n",
+    "\n",
+    "- It pauses the program and waits for the user to type something.\n",
+    "\n",
+    "- Whatever the user types is returned as a string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70ba28f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_name = input(\"Enter your name: \")\n",
+    "print(f\"Hello, {user_name}!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5cf5e36b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are 23 years old.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "userAge = input(\"Enter your age: \")\n",
+    "print(f\"You are {userAge} years old.\")\n",
+    "type(userAge)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "930d412b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# changing the value of an input function to an integer\n",
+    "user_age = int(input(\"Enter your age: \"))\n",
+    "print(f\"You are {user_age} years old.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef8f747a",
+   "metadata": {},
+   "source": [
+    "### Eval()\n",
+    "\n",
+    "The eval() function in Python takes a string and runs it as Python code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8e66501",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 5\n",
+    "result = eval(\"x + 10\")\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bd827d21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are 23 years old.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "userAge = eval(input(\"Enter your age: \"))\n",
+    "print(f\"You are {userAge} years old.\")  \n",
+    "type(userAge)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1bf9938",
+   "metadata": {},
+   "source": [
+    "eval() can run any code, which makes it unsafe if the input comes from users (it can execute harmful commands).\n",
+    "\n",
+    "✅ Use it only when:\n",
+    "\n",
+    "You fully control the input string.\n",
+    "\n",
+    "You need to quickly evaluate math expressions or Python expressions.\n",
+    "\n",
+    "❌ Avoid it for user inputs or sensitive code."
    ]
   },
   {
@@ -588,12 +715,185 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7dd2808",
+   "id": "7b99c5f1",
+   "metadata": {},
+   "source": [
+    "*initiator*   \n",
+    "\n",
+    "while *condition*:  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;    *loop body*  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;    *code to loop*  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;    *update statement*  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00dacc28",
    "metadata": {},
    "source": [
     "### For Loops VS While Loops\n",
     "\n",
     "For Loops are primarily used when the number of iterations is known or when iterating over a sequence (like a list, string, or range). Whereas While Loops are used when the number of iterations is unknown and the loop continues as long as a specific condition remains true."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8c012907",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count is: 0\n",
+      "Count is: 1\n",
+      "Count is: 2\n",
+      "Count is: 3\n",
+      "Count is: 4\n",
+      "Count is: 5\n",
+      "Loop has ended\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0  # Initialize\n",
+    "\n",
+    "while count <= 5:  # Condition\n",
+    "    print(f\"Count is: {count}\")  # Loop body\n",
+    "    count += 1  # Update (prevents infinite loop)\n",
+    "\n",
+    "print(\"Loop has ended\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65d7dfa2",
+   "metadata": {},
+   "source": [
+    "#### Key Components:\n",
+    "\n",
+    "Initiator: The variable you set before the loop starts, so the loop has something to check against.  \n",
+    "\n",
+    "Condition: A boolean expression that determines if the loop continues.  \n",
+    "\n",
+    "Loop Body: The code that executes repeatedly.  \n",
+    "\n",
+    "Update Statement: Code that eventually changes the condition (to avoid infinite loops)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bae4ba88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have selected vanilla ice cream.\n",
+      "You have selected chocolate ice cream.\n",
+      "You have selected strawberry ice cream.\n"
+     ]
+    }
+   ],
+   "source": [
+    "icecream = input(\"What icecream flavours do you want?: \")\n",
+    "while icecream.lower() != \"quit\":\n",
+    "    print(f\"You have selected {icecream} ice cream.\")\n",
+    "    icecream = input(\"What icecream flavours do you want?: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8c6ca4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"\\nWhat will you like to do today?\"\n",
+    "prompt += \"\\nEnter 'quit' to end the program. \"\n",
+    "\n",
+    "activities = \"\"\n",
+    "while activities.lower() != \"quit\":\n",
+    "    activities = input(prompt)\n",
+    "    print(f\"We're going to {activities}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ce4855a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Age-based ticket pricing\n",
+    "\n",
+    "age = \"\"\n",
+    "\n",
+    "while age != \"quit\":\n",
+    "    age = input(\"Enter your age (or 'quit' to stop): \")\n",
+    "\n",
+    "    if age == \"quit\":\n",
+    "        break\n",
+    "\n",
+    "    age = int(age)\n",
+    "\n",
+    "    if age < 3:\n",
+    "        print(\"Your ticket is free.\")\n",
+    "    elif age <= 12:\n",
+    "        print(\"Your ticket is $10.\")\n",
+    "    else:\n",
+    "        print(\"Your ticket is $15.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50e4cdc1",
+   "metadata": {},
+   "source": [
+    "#### Using Flags\n",
+    "\n",
+    "A flag is a variable that signals whether a program should keep running."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "099ae5bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating the age-based ticket pricing using a flag\n",
+    "\n",
+    "active = True   # this is the flag\n",
+    "\n",
+    "while active:\n",
+    "    age = input(\"Enter your age (or 'quit' to stop): \")\n",
+    "\n",
+    "    if age == \"quit\":\n",
+    "        active = False   # turn the flag off, loop stops\n",
+    "    else:\n",
+    "        age = int(age)\n",
+    "        if age < 3:\n",
+    "            print(\"Your ticket is free.\")\n",
+    "        elif age <= 12:\n",
+    "            print(\"Your ticket is $10.\")\n",
+    "        else:\n",
+    "            print(\"Your ticket is $15.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae6100eb",
+   "metadata": {},
+   "source": [
+    "active = True → loop keeps running.\n",
+    "\n",
+    "active = False → loop ends.\n",
+    "\n",
+    "So, while True: is like a permanent “on” flag, and you break it manually. Using a named flag (active) just makes it clearer what controls the loop."
    ]
   },
   {
@@ -605,6 +905,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72264269",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "food_list = [\"rice\", \"beans\", \"chicken\", \"rice\", \"pasta\", \"noodles\", \"eggs\",\"rice\"]\n",
+    "\n",
+    "while \"rice\" in food_list:\n",
+    "    food_list.remove(\"rice\")\n",
+    "\n",
+    "print(food_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43631e3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "invited_guests = [\"Sarah\", \"Anne\", \"Michael\"]\n",
+    "confirmed_guests = []\n",
+    "\n",
+    "while invited_guests:\n",
+    "    current_guest = invited_guests.pop()\n",
+    "    print(\"Inviting \" + current_guest + \"...\")\n",
+    "    confirmed_guests.append(current_guest)\n",
+    "\n",
+    "print(\"The following guests have been invited:\")\n",
+    "for guest in confirmed_guests:\n",
+    "    print(guest)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1e91bf84",
    "metadata": {},
@@ -613,11 +948,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cef62b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "replies = {}\n",
+    "active = True\n",
+    "\n",
+    "while active:\n",
+    "    name = input(\"\\nWhat is your name? \")\n",
+    "    reply = input(\"What's your favourite snack?: \")\n",
+    "\n",
+    "    replies[name] = reply\n",
+    "\n",
+    "    repeat = input(\"Would you like to let someone else respond? (yes/no) \")\n",
+    "    if repeat.lower() == \"no\":\n",
+    "        active = False\n",
+    "\n",
+    "print(\"\\nPoll Results\")\n",
+    "for name, reply in replies.items():\n",
+    "    print(f\"{name} would like to eat {reply}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "925f47b2",
    "metadata": {},
    "source": [
-    "### **Comprehensions**"
+    "### **Comprehensions**\n",
+    "\n",
+    "Comprehensions are a short and clean way to create new sequences like lists, sets, or dictionaries from existing ones. They let you write loops and conditions in a single line, making the code easier to read."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "052e318f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list comprehension\n",
+    "\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "squares = [n**2 for n in numbers]\n",
+    "print(squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c67966a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set comprehension\n",
+    "\n",
+    "unique_squares = {n**2 for n in numbers}\n",
+    "print(unique_squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1468b7e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dictionary comprehension\n",
+    "\n",
+    "name_lengths = {name: len(name) for name in [\"Alice\", \"Bob\", \"Charlie\"]}\n",
+    "print(name_lengths)"
    ]
   },
   {
@@ -625,8 +1027,18 @@
    "id": "a3ec2503",
    "metadata": {},
    "source": [
-    "Break"
+    "#### Break\n",
+    "\n",
+    "This stops a loop completely. It can be used to exit a loop early. Especially when there's a chance of it going on infinitely"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9bddaad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
