--- a/intro_to_python_3.ipynb
+++ b/intro_to_python_3.ipynb
@@ -1038,14 +1038,90 @@
    "id": "c9bddaad",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for num in range(1, 10):\n",
+    "    if num == 5:\n",
+    "        break\n",
+    "    print(num)  \n",
+    "# Prints 1 to 4, then stops\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f904d6ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = [\"John\", \"Mary\", \"Amanda\", \"Paul\"]\n",
+    "\n",
+    "search = \"Amanda\"\n",
+    "\n",
+    "for name in names:\n",
+    "    if name == search:\n",
+    "        print(\"Found:\", name)\n",
+    "        break\n",
+    "\n",
+    "# This way, the loop stops as soon as the item is found,\n",
+    "# instead of checking the rest of the list unnecessarily."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "439cf4e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:  # infinite loop\n",
+    "    password = input(\"Enter password: \")\n",
+    "    if password == \"secret123\":\n",
+    "        print(\"Access granted\")\n",
+    "        break   # exit loop when correct password is entered\n",
+    "    else:\n",
+    "        print(\"Wrong password, try again\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "4e4fd2d2",
    "metadata": {},
    "source": [
-    "Continue"
+    "#### Continue\n",
+    "\n",
+    "This skips the current loop step and moves to the next.\n",
+    "\n",
+    "Can be used when you want to ignore certain cases but still keep looping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "674958cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for num in range(1, 6):\n",
+    "    if num == 3:\n",
+    "        continue\n",
+    "    print(num)  \n",
+    "# Prints 1, 2, 4, 5 (skips 3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e39bb5a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = 0\n",
+    "\n",
+    "while num < 10:\n",
+    "    num += 1\n",
+    "    if num % 2 == 0:\n",
+    "        continue   # skip even numbers\n",
+    "    print(num)\n"
    ]
   },
   {
@@ -1053,7 +1129,7 @@
    "id": "d60231c4",
    "metadata": {},
    "source": [
-    "Loops and the else statement"
+    "#### Loops and the else statement"
    ]
   }
  ],
