updated the else block in loops

--- a/intro_to_python_3.ipynb
+++ b/intro_to_python_3.ipynb
@@ -1129,7 +1129,30 @@
    "id": "d60231c4",
    "metadata": {},
    "source": [
-    "#### Loops and the else statement"
+    "#### Loops and the else statement\n",
+    "\n",
+    "In python, a for loop can have an else block. The else block only runs if the loop finishes normally (not stopped by break)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b020165",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [1, 2, 3, 4]\n",
+    "\n",
+    "for n in numbers:\n",
+    "    if n == 5:\n",
+    "        print(\"Found 5!\")\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"5 was not found.\")\n",
+    "\n",
+    "# The else runs because the loop didn’t find 5\n",
+    "# If 5 were in the list, the break would stop the loop\n",
+    "# and skip the else."
    ]
   }
  ],
